# ryder-carrier-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: prod_keypair_setup.md
infra/: deploy_app.sh  deploy_infra.sh  dev.bicepparam  main.bicep  prod.bicepparam
infra/modules/: container_apps_env.bicep  jobs.bicep  shared.bicep
local_config/: CONFIG.sample.json
scripts/: explore_order_refs.py  find_shipid.py  sample_one_row.py  smoke_snowflake.py
sql/: milestone_candidates_query.sql  milestone_query.sql  trace_candidates_query.sql  trace_query.sql
src/ryder_carrier_api/: __main__.py  cli.py  config.py
src/ryder_carrier_api/clients/: ryder_client.py  snowflake_client.py
src/ryder_carrier_api/secrets/: __init__.py  base.py  blob_json.py  env_provider.py  key_vault.py
src/ryder_carrier_api/services/: __init__.py  base.py  cleanup_service.py  milestone_service.py  trace_service.py
src/ryder_carrier_api/storage/: __init__.py  base.py  in_memory.py  table_storage.py
src/ryder_carrier_api/transformers/: __init__.py  base.py  milestone_payload.py  trace_payload.py
src/ryder_carrier_api/utils/: logging.py  natural_key.py  (+1 more)
tests/: conftest.py
tests/test_clients/: test_ryder_client.py
tests/test_secrets/: test_env_provider.py
tests/test_services/: test_puller_service.py
tests/test_storage/: test_in_memory.py
tests/test_transformers/: test_milestone_payload.py  test_trace_payload.py
tests/test_utils/: test_natural_key.py  test_timezone.py
(+4 files in other folders)
