[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryder-carrier-api"
version = "0.1.0"
description = "Scheduled Python pipeline pushing MasterMind shipment data from Snowflake to Ryder's Carrier API."
requires-python = ">=3.11"
authors = [{ name = "USMMG Data Engineering" }]

dependencies = [
    "snowflake-connector-python[pandas]==3.12.4",
    "azure-identity==1.19.0",
    "azure-keyvault-secrets==4.9.0",
    "azure-data-tables==12.6.0",
    "azure-storage-blob==12.24.0",
    "azure-monitor-opentelemetry==1.6.4",
    "httpx==0.28.1",
    "tenacity==9.0.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "cryptography==44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "respx==0.22.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[project.scripts]
ryder-carrier-api = "ryder_carrier_api.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ryder_carrier_api" = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
